fix: change buttons breakpoint to lg and hide brand text earlier to avoid overlap at 905px

--- a/src/styles/_materialui.scss
+++ b/src/styles/_materialui.scss
@@ -105,7 +105,7 @@
   white-space: nowrap;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   .header-page-title {
     font-size: 16px;
   }
